k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payflow-api
  namespace: payflow
spec:
  type: ClusterIP
  selector:
    app: payflow-api
  ports:
    - port: 80
      targetPort: 8088
      protocol: TCP
      name: http
